# ouroboros-free

./: BIBLE.md  README.md  VERSION.test  colab_launcher.py  model_test.py  pyproject.toml  test_model_switching.py  test_persistence.txt
memory/: identity.md  test_persistence.txt
ouroboros/: __init__.py  agent.py  consciousness.py  context.py  llm.py  loop.py  review.py  utils.py
ouroboros/tools/: browser.py  control.py  core.py  evolution_stats.py  registry.py  review.py  search.py  shell.py  vision.py
prompts/: SYSTEM.md
supervisor/: events.py  git_ops.py  telegram.py  workers.py
tests/: test_model_switching.py  test_self.py  test_smoke.py  test_tool_validation.md
