[tool.poetry]
name = "ouroboros"
version = "6.2.7"
description = "A self-modifying AI agent that writes its own code, rewrites its own mind, and evolves autonomously."
authors = ["Anton Razzhigaev <abstractdl@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
logzero = "^1.7.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
PyYAML = "^6.0.2"
typing-extensions = "^4.12.2"
playwright = "^1.47.0"
openai = "^1.50.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
python-lsp-server = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
